--- a/src/AuctionService/appsettings.json
+++ b/src/AuctionService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgresspw;Database=auctions;Integrated Security=true;Pooling=true"
+  }
 }
