--- a/src/AuctionService/appsettings.Development.json
+++ b/src/AuctionService/appsettings.Development.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgresspw;Database=auctions;Integrated Security=true;Pooling=true"
   },
-  "IdentityServiceUrl": "http://localhost:5000"
+  "IdentityServiceUrl": "http://identity-svc",
+  "RabbitMq": {
+    "Host": "rabbitmq"
+  }
 }
