--- a/src/AuctionService/appsettings.json
+++ b/src/AuctionService/appsettings.json
@@ -2,12 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgresspw;Database=auctions;Integrated Security=true;Pooling=true"
   },
-  "IdentityServiceUrl": "http://localhost:5000"
+  "IdentityServiceUrl": "http://identity-svc",
+  "RabbitMq": {
+    "Host": "rabbitmq"
+  }
 }
