--- a/src/SearchService/appsettings.Development.json
+++ b/src/SearchService/appsettings.Development.json
@@ -7,7 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MongoDbConnection": "mongodb://root:mongopw@localhost"
+    "MongoDbConnection": "mongodb://root:mongopw@mongodb"
   },
-  "AuctionServiceUrl": "http://localhost:7001"
+  "AuctionServiceUrl": "http://auction-svc",
+  "RabbitMq": {
+    "Host": "rabbitmq"
+  }
 }
